[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "friendbrw"
version = "0.0.1"
authors = [
  { name="Sam Feuer", email="sfeuer45@gmail.com" },
  { name="Wyatt Hopkins", email="wyatt_hopkins@outlook.com" },
  { name="David Rollo", email="davidarollo@outlook.com" },
  { name="John Wright", email="wright.2592@osu.edu" },

]
description = "A reciprocity-based method for improving community detection on directed friendship networks"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PolloRollo/FRIENDBRW"
"Bug Tracker" = "https://github.com/PolloRollo/FRIENDBRW/issues"